# camel

./: .gitignore  .pylintrc  CMakeLists.txt  README.md  plot.py  pyproject.toml  setup.py
camelpy/: __init__.py
cmake/: Warnings.cmake
eval/: CamelEval.cmake  README.md  base_job.json  eval.fish  example_run.bash
eval/pyeval/: __main__.py  args.py  config.py  job.py  run.py
eval/pyeval/db/: context.py
eval/pyeval/db/orm/models/: args.py  benchmark.py  run.py
eval/snp/: CamelSnp.cmake
eval/snp/src/: main.cc
eval/src/: main.py
eval/src/task/: schemas.py  service.py
include/camel/: camel.h  correct.h  coverage.h  io.h  mapping.h  meta.h  poa_config.h  serialization.h  state.h  utils.h
misc/: plot_winlen.py
packaging/: CMakeLists.txt  camelConfig.cmake
scripts/: eval.py
scripts/pyeval/: __main__.py  args.py  config.py  db.py  job.py
src/: bind.cc  main.cc  version.h.in
src/camel/: correct.cc  coverage.cc  io.cc  mapping.cc  serialization.cc  state.cc
src/camel/detail/: alignment.cc  alignment.h  call_sites.cc  call_sites.h  consensus.cc  consensus.h  correct.h  coverage.cc  coverage.h  interval.h  nucleic_view.cc  nucleic_view.h  overlap.cc  overlap.h  overload.h  serialization.cc  serialization.h  task_queue.cc  task_queue.h  window.cc  window.h
test/: Camel.test.cmake  CamelTest.cmake  main.cc
test/src/: serialization.cc
util/: README.md  report.ipynb  requirenments.txt
util/eval/: __init__.py  evaluator.py  requirenments.txt
util/eval/db/: context.py
util/eval/db/orm/models/: __init__.py  quast.py  run.py
util/eval/evaluator/: __main__.py  tasks.py  util.py
